test/tests/errors/error-record-initially-unbound.sm
// true
// true
// false
/**/
/**/

program {
    record person(name: string, age: string);
    output person.age;
}